Fix styling problems of Map dialog - fix viewprofile once again - improve dialogs on small screens

--- a/scss/overwrites/_bp3-overwrites.scss
+++ b/scss/overwrites/_bp3-overwrites.scss
@@ -2,9 +2,9 @@ $bp3-dialog-radius: 2px;
 
 .bp3-dialog {
   position: absolute !important;
-  max-height: calc(100vh - 60px);
+  max-height: calc(100vh - 90px);
   max-width: 90vw;
-  margin: 30px 0px;
+  margin: 0px;
   padding: 0px;
   background: var(--bp3DialogBgSecondary);
   border-radius: $bp3-dialog-radius;
